--- a/www/ListPropertyAdded.html
+++ b/www/ListPropertyAdded.html
@@ -29,45 +29,44 @@
 <body>
 
 	<!-- menu start here -->
+   
 	<div id="menu">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-md-12 col-xs-12">
-					<nav class="navbar">
-						<div class="navbar-header">
-							<span class="menutext visible-xs">Menu</span>
-							<button data-target=".navbar-ex1-collapse" data-toggle="collapse"
-								class="btn btn-navbar navbar-toggle" type="button"><i class="fa fa-bars"
-									aria-hidden="true"></i></button>
-						</div>
-						<div class="collapse navbar-collapse navbar-ex1-collapse padd0">
-							<ul class="nav navbar-nav">
-								<li class="dropdown"><a href="#" class="dropdown-toggle"
-										data-toggle="dropdown">Manage</a>
-										<ul class="dropdown-menu">
-											<li><a href="index.html"><i class="fa fa-angle-right"
-														aria-hidden="true"></i><b>AddPropertyPage</b></a></li>
-											<li><a href="Search.html"><i class="fa fa-angle-right"
-														aria-hidden="true"></i><b>SearchPage</b></a></li>
-										</ul>
-								</li>
-								<li><a href="ListPropertyAdded.html">List Property</a></li>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-xs-12">
+                    <nav class="navbar">
+                        <div class="navbar-header">
+                            <span class="menutext visible-xs">Menu</span>
+                            <button data-target=".navbar-ex1-collapse" data-toggle="collapse"
+                                class="btn btn-navbar navbar-toggle" type="button"><i class="fa fa-bars"
+                                    aria-hidden="true"></i></button>
+                        </div>
+                        <div class="collapse navbar-collapse navbar-ex1-collapse padd0">
+                            <ul class="nav navbar-nav">
+                                <li class="dropdown"><a href="#" class="dropdown-toggle"
+                                        data-toggle="dropdown">Manage</a>
+                                                    <ul class="dropdown-menu">
+                                        <li><a href="index.html"><i class="fa fa-angle-right"
+                                                    aria-hidden="true"></i><b>Add Activity</b></a></li>
+                                        <li><a href="Search.html"><i class="fa fa-angle-right"
+                                                    aria-hidden="true"></i><b>Search Activity</b></a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="ListPropertyAdded.html">List Activity</a></li>
 
-							</ul>
-						</div>
-					</nav>
-				</div>
-			</div>
-		</div>
-
-	</div>
-
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
 	<!-- menu end here -->
 
 	<!-- breadcrumb start here -->
 	<div class="bread-crumb">
 		<div class="container">
-			<h2>List Property Added</h2>
+			<h2>List Activity Added</h2>
 		</div>
 	</div>
 	<!-- breadcrumb end here -->
@@ -77,7 +76,7 @@
 		<div class="row">
 			<div class="col-sm-3">
 				<div class="left-box">
-					<h6>List Details Property</h6>
+					<h6>List Activity</h6>
 					<div class="last1">
 						<ul class="list-unstyled listing-property">
 							<!-- <li>
@@ -109,7 +108,7 @@
 		</div>
 	</div>
 	<!-- main container end here -->
-    <footer>
+	<footer>
 		<div class="container">
 			<div class="row padd-b">
 				<div class="col-sm-3 contact">
@@ -125,10 +124,10 @@
 						</li>
 						<li>
 							<div class="inner"><i class="fa fa-envelope" aria-hidden="true"></i>Email</div>
-							<div class="in"><a href="#"> :TechNetOfThing@gmail.com</a></div>
+							<div class="in"><a href="#"> :i-Explore@gmail.com</a></div>
 							<br>
 							<div class="inner paddleft">website</div>
-							<div class="in"><a href="#"> : www.rentalzTechNetOfThing.com</a></div>
+							<div class="in"><a href="#"> : www.i-Explore.com</a></div>
 						</li>
 					</ul>
 				</div>
@@ -138,7 +137,7 @@
 				<div class="col-sm-12">
 					<div class="powered">
 						<div class="col-sm-6 padd0">
-							<p>© Copyright 2021. <span>TechNetOfThing </span> by Long Pham <a target="_blank"
+							<p>© Copyright 2022. <span>i-Explore</span> by Long Pham <a target="_blank"
 									href="https://www.themultimediadesigner.com/"></a> </p>
 						</div>
 						<div class="col-sm-6 padd0 text-right">
