--- a/www/Search.html
+++ b/www/Search.html
@@ -32,11 +32,6 @@
                     <nav class="navbar">
                         <div class="navbar-header">
                             <span class="menutext visible-xs">Menu</span>
-                            <!-- <div class="col-sm-4 col-md-4 col-xs-12">
-                                <div id="logo">
-                                    <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo" title="logo" /></a>
-                                </div>
-                            </div> -->
                             <button data-target=".navbar-ex1-collapse" data-toggle="collapse"
                                 class="btn btn-navbar navbar-toggle" type="button"><i class="fa fa-bars"
                                     aria-hidden="true"></i></button>
@@ -47,12 +42,12 @@
                                         data-toggle="dropdown">Manage</a>
                                                     <ul class="dropdown-menu">
                                         <li><a href="index.html"><i class="fa fa-angle-right"
-                                                    aria-hidden="true"></i><b>AddPropertyPage</b></a></li>
+                                                    aria-hidden="true"></i><b>Add Activity</b></a></li>
                                         <li><a href="Search.html"><i class="fa fa-angle-right"
-                                                    aria-hidden="true"></i><b>SearchPage</b></a></li>
+                                                    aria-hidden="true"></i><b>Search Activity</b></a></li>
                                     </ul>
                                 </li>
-                                <li><a href="ListPropertyAdded.html">List Property</a></li>
+                                <li><a href="ListPropertyAdded.html">List Activity</a></li>
 
                             </ul>
                         </div>
@@ -64,18 +59,6 @@
     <!-- menu end here -->
 
     <!-- slider start here -->
-    <div class="slice">
-        <div class="slideshow owl-carousel">
-            <div class="item">
-                <img src="images/hoian.jpg" alt="slider" title="slider" class="img-responsive" />
-            </div>
-            <div class="item">
-                <img src="images/hochiminh.jpg" alt="slider" title="slider" class="img-responsive" />
-            </div>
-            <div class="item">
-                <img src="images/gaivietnam.png" alt="slider" title="slider" class="img-responsive" />
-            </div>
-        </div>
         <!-- slide-detail start here -->
         <div class="slide-detail">
             <div class="container">
@@ -145,10 +128,10 @@
 						</li>
 						<li>
 							<div class="inner"><i class="fa fa-envelope" aria-hidden="true"></i>Email</div>
-							<div class="in"><a href="#"> :TechNetOfThing@gmail.com</a></div>
+							<div class="in"><a href="#"> :i-Explore@gmail.com</a></div>
 							<br>
 							<div class="inner paddleft">website</div>
-							<div class="in"><a href="#"> : www.rentalzTechNetOfThing.com</a></div>
+							<div class="in"><a href="#"> : www.i-Explore.com</a></div>
 						</li>
 					</ul>
 				</div>
@@ -158,7 +141,7 @@
 				<div class="col-sm-12">
 					<div class="powered">
 						<div class="col-sm-6 padd0">
-							<p>© Copyright 2021. <span>TechNetOfThing </span> by Long Pham <a target="_blank"
+							<p>© Copyright 2022. <span>i-Explore </span> by Long Pham <a target="_blank"
 									href="https://www.themultimediadesigner.com/"></a> </p>
 						</div>
 						<div class="col-sm-6 padd0 text-right">
