--- a/www/DetailsProperty.html
+++ b/www/DetailsProperty.html
@@ -2,16 +2,24 @@
 <html lang="en" dir="ltr">
 
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Tour Booking Form</title>
+	<title>i-Explore</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<!-- <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css"> -->
+	<!-- <script type="text/javascript" src="js/jquery.3.1.1.min.js"></script>
+		<script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/socket.io-1.0.0.js"></script>
+		<script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript" src="js/storage.js"></script>
+		<script type="text/javascript" src="js/verification.js"></script>
+		<script type="text/javascript" src="js/config.js"></script>
+		<script type="text/javascript" src="js/index.js"></script> -->
+	<!-- <link href="lib/styles/mystyles.css" rel="stylesheet" type="text/css" /> -->
+	<link href="lib/fonts/fonts.css" rel="stylesheet" type="text/css" />
 	<!-- Bootstrap stylesheet -->
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 	<!-- font -->
-	<link
-		href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900%7CPT+Serif:400,400i,700,700i"
-		rel="stylesheet">
+
 	<link href="css/ele-style.css" rel="stylesheet" type="text/css" />
 	<!-- stylesheet -->
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -23,23 +31,20 @@
 	<!--bootstrap select-->
 	<link href="js/dist/css/bootstrap-select.css" rel="stylesheet" type="text/css" />
 	<link href="js/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" />
+	<script>
+		window.name = "homepage";
+	</script>
 </head>
 
 <body>
 	<!-- menu start here -->
 	<div id="menu">
-
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-xs-12">
 					<nav class="navbar">
 						<div class="navbar-header">
-							<span class="menutext visible-xs">Menu</span>
-							<!-- <div class="col-sm-4 col-md-4 col-xs-12">
-                                <div id="logo">
-                                    <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo" title="logo" /></a>
-                                </div>
-                            </div> -->
+							<span class="menutext visible-xs">Home</span>
 							<button data-target=".navbar-ex1-collapse" data-toggle="collapse"
 								class="btn btn-navbar navbar-toggle" type="button"><i class="fa fa-bars"
 									aria-hidden="true"></i></button>
@@ -50,28 +55,17 @@
 										data-toggle="dropdown">Manage</a>
 									<ul class="dropdown-menu">
 										<li><a href="index.html"><i class="fa fa-angle-right"
-													aria-hidden="true"></i>AddPropertyPage</a></li>
+													aria-hidden="true"></i><b>Add Activity</b></a></li>
 										<li><a href="Search.html"><i class="fa fa-angle-right"
-													aria-hidden="true"></i>SearchPage</a></li>
+													aria-hidden="true"></i><b>Search Activity</b></a></li>
 									</ul>
 								</li>
-								<li><a href="ListPropertyAdded.html">List Property</a></li>
+								<li><a href="ListPropertyAdded.html">List Activity</a></li>
 
 							</ul>
 						</div>
 					</nav>
 				</div>
-			</div>
-		</div>
-		<div class="slideshow owl-carousel">
-			<div class="item">
-				<img src="images/hoian.jpg" alt="slider" title="slider" class="img-responsive" />
-			</div>
-			<div class="item">
-				<img src="images/hochiminh.jpg" alt="slider" title="slider" class="img-responsive" />
-			</div>
-			<div class="item">
-				<img src="images/gaivietnam.png" alt="slider" title="slider" class="img-responsive" />
 			</div>
 		</div>
 	</div>
@@ -81,10 +75,7 @@
 	<!-- breadcrumb start here -->
 	<div class="bread-crumb">
 		<div class="container">
-			<h2>Details Property</h2>
-			<!-- <ul class="list-inline">
-				<li><a href="tour-booking-form.html">Hotel</a></li>
-			</ul> -->
+			<h2>Details Activity</h2>
 		</div>
 	</div>
 	<!-- breadcrumb end here -->
@@ -120,10 +111,10 @@
 						</li>
 						<li>
 							<div class="inner"><i class="fa fa-envelope" aria-hidden="true"></i>Email</div>
-							<div class="in"><a href="#"> :TechNetOfThing@gmail.com</a></div>
+							<div class="in"><a href="#"> :i-Explore@gmail.com</a></div>
 							<br>
 							<div class="inner paddleft">website</div>
-							<div class="in"><a href="#"> : www.rentalzTechNetOfThing.com</a></div>
+							<div class="in"><a href="#"> : www.i-ExploreTechNetOfThing.com</a></div>
 						</li>
 					</ul>
 				</div>
@@ -133,7 +124,7 @@
 				<div class="col-sm-12">
 					<div class="powered">
 						<div class="col-sm-6 padd0">
-							<p>© Copyright 2021. <span>TechNetOfThing </span> by Long Pham <a target="_blank"
+							<p>© Copyright 2022. <span>i-Explore</span> by Long Pham <a target="_blank"
 									href="https://www.themultimediadesigner.com/"></a> </p>
 						</div>
 						<div class="col-sm-6 padd0 text-right">
