--- a/www/index.html
+++ b/www/index.html
@@ -170,10 +170,9 @@
                                 aria-hidden="true"></i></button>
                     </div>
 
-                    <div class="col-sm-3 wid2">
+                    <div class="col-sm-2 wid time">
                         <label>Time Of Attending<span class="required-field"> (*)</span></label>
-                        <input id="timeOfAttending" name="s" class="form-control" value=""
-                            placeholder="Enter ime Of Attending" type="time">
+                        <input id="timeOfAttending" name="s" class="form-control" value=""type="time">
                     </div>
           
                     <div class="col-sm-2 wid2">
@@ -210,7 +209,7 @@
                             <div class="in"><a href="#"> :i-Explore@gmail.com</a></div>
                             <br>
                             <div class="inner paddleft">website</div>
-                            <div class="in"><a href="#"> : www.i-ExploreTechNetOfThing.com</a></div>
+                            <div class="in"><a href="#"> : www.i-Explore.com</a></div>
                         </li>
                     </ul>
                 </div>
